--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,6 +32,18 @@ body{
 .topnav .icon {
   display: none;
 }
+/*this is for search bar*/
+input[type=text] {
+  width: 130px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+
+/* When the input field gets focus, change its width to 100% */
+input[type=text]:focus {
+  width: 100%;
+}
+
 
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
