--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to right, #ff9a9e, #fad0c4);
+  background: linear-gradient(black);
   font-family: "Open Sans", sans-serif;
 }
 
