--- a/CSS/style.css
+++ b/CSS/style.css
@@ -270,3 +270,19 @@ img {
 }
 
 <script type="module" src="https://unpkg.com/dark-mode-toggle"></script>
+
+import * as DarkModeToggle from 'https://googlechromelabs.github.io/dark-mode-toggle/src/dark-mode-toggle.mjs';
+
+const toggle = document.querySelector('dark-mode-toggle');
+const body = document.body;
+
+// Set or remove the `dark` class the first time.
+toggle.mode === 'dark'
+  ? body.classList.add('dark')
+  : body.classList.remove('dark');
+
+// Listen for toggle changes (which includes `prefers-color-scheme` changes)
+// and toggle the `dark` class accordingly.
+toggle.addEventListener('colorschemechange', () => {
+  body.classList.toggle('dark', toggle.mode === 'dark');
+});
