--- a/CSS/style.css
+++ b/CSS/style.css
@@ -306,16 +306,39 @@ toggle.addEventListener('colorschemechange', () => {
   box-shadow: 1px 5px 2px #EDEDED;
 }
 
-.search:hover {
-  background: #FCFCFC;
-}
+		/*search box contact/*
+    body{
+			background-color: #2E4053;
+		}
 
-.search:focus {
-  outline: none;
-  background: #FFFFFF;
-  border-color: #7AB0E6;
-}
-
-#mglass {margin-left: 5px;
-   background: white;
-}
+		.container{
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%,-50%);
+			position: absolute;
+		}
+		.search_box{
+			border-radius: 40px;
+			background-color: white;
+		}
+		form{
+			margin: 0;
+		}
+		input{
+			border:none;
+			margin:15px 10px 15px 5px;
+			font-size: 20px;
+			outline: none;
+			color:#17202A;
+		}
+		.search_box button i{
+			font-size: 20px;
+			margin: 0px 10px;
+			color:#0063D4;
+		}
+		
+		button{
+			background: transparent;
+			border:none;
+			outline: none;
+		}
